content/docs/v0.0.1/reference/aws.kubeform.com/LightsailStaticIPAttachment.md
---
title: LightsailStaticIPAttachment
menu:
  docs_v0.0.1:
    identifier: lightsailstaticipattachment-aws.kubeform.com
    name: LightsailStaticIPAttachment
    parent: aws.kubeform.com-reference
    weight: 1
menu_name: docs_v0.0.1
section_menu_id: reference
info:
  version: v0.0.1
---

## LightsailStaticIPAttachment
| Field | Type | Description |
| ------ | ----- | ----------- |
| `apiVersion` | string | `aws.kubeform.com/v1alpha1` |
|    `kind` | string | `LightsailStaticIPAttachment` |
| `metadata` | ***[Kubernetes meta/v1.ObjectMeta](https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.13/#objectmeta-v1-meta)***|Refer to the Kubernetes API documentation for the fields of the `metadata` field.|
| `spec` | ***[LightsailStaticIPAttachmentSpec](#LightsailStaticIPAttachmentSpec)***||
| `status` | ***[LightsailStaticIPAttachmentStatus](#LightsailStaticIPAttachmentStatus)***||
## LightsailStaticIPAttachmentSpec
##### (Appears on:[LightsailStaticIPAttachment](#LightsailStaticIPAttachment), [LightsailStaticIPAttachmentStatus](#LightsailStaticIPAttachmentStatus))
| Field | Type | Description |
| ------ | ----- | ----------- |
| `providerRef` | ***[Kubernetes core/v1.LocalObjectReference](https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.13/#localobjectreference-v1-core)***||
| `id` | ***string***||
| `instanceName` | ***string***||
| `staticIPName` | ***string***||
## LightsailStaticIPAttachmentStatus
##### (Appears on:[LightsailStaticIPAttachment](#LightsailStaticIPAttachment))
| Field | Type | Description |
| ------ | ----- | ----------- |
| `observedGeneration` | ***int64***| ***(Optional)*** Resource generation, which is updated on mutation by the API Server.|
| `output` | ***[LightsailStaticIPAttachmentSpec](#LightsailStaticIPAttachmentSpec)***| ***(Optional)*** |
| `state` | ***kubeform.dev/kubeform/apis.State***| ***(Optional)*** |
---
